--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -41,7 +41,7 @@
       </div>
       <img class="banniere" src="../images/banniere.png" alt="Baniere">
     </header>
-    
+
     <main class="limitedWidthBlockContainer">
       <div class="limitedWidthBlock" id="limitedWidthBlock">
         <div class="cartAndFormContainer" id="cartAndFormContainer">
@@ -68,7 +68,7 @@
                     </div>
                   </div>
                 </div>
-              </article> -->
+              </article>
             </section>
             <div class="cart__price">
               <p>Total (<span id="totalQuantity"><!-- 2 --></span> articles) : <span id="totalPrice"><!-- 84,00 --></span> €</p>
@@ -109,7 +109,7 @@
         </div>
       </div>
     </main>
-    
+
     <footer>
       <div class="limitedWidthBlockContainer footerMain">
         <div class="limitedWidthBlock">
