--- a/front/html/product.html
+++ b/front/html/product.html
@@ -15,32 +15,32 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-  <body>
-    <header>
-      <div class="limitedWidthBlockContainer informations">
-        <div class="limitedWidthBlock">
-          <ul>
-            <li><img src="../images/icons/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
-            <li><img src="../images/icons/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
-            <li><img src="../images/icons/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
-          </ul>
-        </div>
-      </div>
-      <div class="limitedWidthBlockContainer menu">
-        <div class="limitedWidthBlock">
-          <a href="./index.html">
-            <img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
-          </a>
-          <nav>
-            <ul>
-              <a href="./index.html"><li>Accueil</li></a>
-              <a href="./cart.html"><li>Panier</li></a>
-            </ul>
-          </nav>
-        </div>
-      </div>
-      <img class="banniere" src="../images/banniere.png" alt="Baniere">
-    </header>
+<body>
+<header>
+	<div class="limitedWidthBlockContainer informations">
+		<div class="limitedWidthBlock">
+			<ul>
+				<li><img src="../images/icons/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
+				<li><img src="../images/icons/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
+				<li><img src="../images/icons/adress.svg" alt="logo d'un point de géolocalisation" class="informations__address">01 23 45 67 89</li>
+			</ul>
+		</div>
+	</div>
+	<div class="limitedWidthBlockContainer menu">
+		<div class="limitedWidthBlock">
+			<a href="./index.html">
+				<img class="logo" src="../images/logo.png" alt="Logo de l'entreprise">
+			</a>
+			<nav>
+				<ul>
+					<li><a href="./index.html">Accueil</a></li>
+					<li><a href="./cart.html">Panier</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+	<img class="banniere" src="../images/banniere.png" alt="Baniere">
+</header>
 
 <main class="limitedWidthBlockContainer">
 	<div class="limitedWidthBlock">
@@ -61,21 +61,21 @@
 						<p id="description"><!-- Dis enim malesuada risus sapien gravida nulla nisl arcu. --></p>
 					</div>
 
-              <div class="item__content__settings">
-                <div class="item__content__settings__color">
-                  <label for="color-select">Choisir une couleur :</label>
-                  <select name="color-select" id="colors">
-                      <option value="">--SVP, choisissez une couleur --</option>
-<!--                       <option value="vert">vert</option>
-                      <option value="blanc">blanc</option> -->
-                  </select>
-                </div>
+					<div class="item__content__settings">
+						<div class="item__content__settings__color">
+							<label for="colors">Choisir une couleur :</label>
+							<select name="color-select" id="colors">
+								<option value="">--SVP, choisissez une couleur --</option>
+								<!--                       <option value="vert">vert</option>
+															 <option value="blanc">blanc</option> -->
+							</select>
+						</div>
 
-                <div class="item__content__settings__quantity">
-                  <label for="itemQuantity">Nombre d'article(s) (1-100) :</label>
-                  <input type="number" name="itemQuantity" min="1" max="100" value="0" id="quantity">
-                </div>
-              </div>
+						<div class="item__content__settings__quantity">
+							<label for="quantity">Nombre d'article(s) (1-100) :</label>
+							<input type="number" name="itemQuantity" min="1" max="100" value="0" id="quantity">
+						</div>
+					</div>
 
 					<div class="item__content__addButton">
 						<button id="addToCart">Ajouter au panier</button>
